network.tf
# resource "aws_internet_gateway" "prod-igw" {
#     vpc_id = "${aws_vpc.prod-vpc.id}"
#     tags = {
#         Name = "prod-igw"
#     }
# }

# resource "aws_route" "public-route" {
#   route_table_id         = aws_vpc.prod-vpc.main_route_table_id
#   destination_cidr_block = "0.0.0.0/0"
#   gateway_id             = aws_internet_gateway.prod-igw.id
# }
